# homekb

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  install.sh  next.config.ts  package-lock.json  package.json  tsconfig.json
.claude/agents/: homekb.md
.github/workflows/: engine-release.yml
app/: globals.css  layout.tsx  page.tsx
app/(app)/settings/: page.tsx
app/(app)/status/: page.tsx
app/.well-known/oauth-authorization-server/: route.ts
app/.well-known/oauth-protected-resource/: route.ts
app/api/mcp/: route.ts
app/api/oauth/authorize/: route.ts
app/api/oauth/register/: route.ts
app/api/oauth/token/: route.ts
app/api/relay/health/: route.ts
app/api/relay/pair/: route.ts
app/api/relay/register/: route.ts
app/api/relay/rpc/: route.ts
app/api/relay/tunnel/: route.ts
app/api/relay/tunnel/result/: route.ts
app/oauth/authorize/: page.tsx
app/s/: page.tsx
client/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/(app)/: layout.tsx
client/app/(app)/new/: page.tsx
client/app/(app)/new/drafts/: page.tsx
client/app/(app)/remote/: page.tsx
client/app/(app)/search/: page.tsx
client/app/(app)/settings/: page.tsx
client/app/(app)/shares/: page.tsx
client/app/s/: page.tsx
client/features/desktop/components/: boot-screen.tsx  notice.tsx  settings.tsx  update-banner.tsx
client/features/desktop/store/: desktop-store.ts
client/features/kb/: type.ts
client/features/kb/components/: ai-endpoint-editor.tsx  composer.tsx  domd.tsx  global-md-drop.tsx  icons.tsx  offline-screen.tsx  pair-screen.tsx  qr-scanner.tsx  rebuild-estimate.ts  schedule-card.tsx  settings-web.tsx  share-panel.tsx  share-viewer.tsx  shell.tsx
client/features/kb/components/views/: drafts.tsx  new-note.tsx  reader.tsx  recall.tsx  remote.tsx  shares.tsx  status.tsx
client/features/kb/store/: kb-store.ts
client/lib/client/: asset-ref.spec.ts  connection.ts  desktop.ts  hash-route.ts  md-drop.spec.ts  md-drop.ts  relay-admin.ts  relay-client.ts  rpc.ts  services.spec.ts  services.ts
client/lib/i18n/: config.ts  index.ts  provider.tsx
client/lib/i18n/locales/: en.json  ja.json  zh.json
client/public/: manifest.webmanifest
client/scripts/: build-desktop.sh  fake-home.mjs  gen-icons.mjs  release.sh  smoke-mcp.sh  smoke-relay.sh  tauri-build.mjs
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: engine.rs  main.rs
docs/: ARCHITECTURE.md  DESIGN-BRIEF.md
engine/: Cargo.toml
engine/cli/: Cargo.toml
engine/cli/src/: main.rs  output.rs
engine/cli/src/commands/: ask.rs  assets.rs  image_variants.rs  init.rs  launchd.rs  mcp.rs  mod.rs  new.rs  query.rs  rebuild.rs  reindex.rs  relay.rs  serve.rs  share.rs  start.rs  status.rs  stop.rs  tunnel.rs  uninstall.rs  watch.rs
engine/core/: Cargo.toml
engine/core/src/: api.rs  ask.rs  assets.rs  chunker.rs  compile_queue.rs  config.rs  config_edit.rs  drafts.rs  hasher.rs  launchd.rs  lib.rs  notes.rs  pipeline.rs  reconciler.rs  rpc.rs  scanner.rs  schedule.rs  search.rs  shares.rs  types.rs
engine/core/src/ai/: categorizer.rs  embedder.rs  mod.rs  summarizer.rs
engine/core/src/db/: mod.rs  schema.sql  snapshot.rs  vec_ext.rs
engine/core/tests/: notes_ops.rs  shares_ops.rs
features/desktop/components/: boot-screen.tsx  notice.tsx  settings.tsx  update-banner.tsx
features/desktop/store/: desktop-store.ts
features/kb/: type.ts
features/kb/components/: composer.tsx  domd.tsx  icons.tsx  kb.tsx  markdown.tsx  offline-screen.tsx  pair-screen.tsx  qr-scanner.tsx  share-panel.tsx  shell.tsx
features/kb/components/views/: drafts.tsx  new-note.tsx  reader.tsx  recall.tsx  remote.tsx  shares.tsx  status.tsx
features/kb/store/: kb-store.ts
lib/client/: asset-ref.spec.ts  asset-ref.ts  connection.spec.ts  connection.ts  desktop.ts  hash-route.ts  relay-client.ts  rpc.ts  services.ts
lib/mcp/: handler.ts  tools.ts
lib/relay/: auth.ts  db.ts  hub.spec.ts  hub.ts  origin.ts
public/: manifest.webmanifest
relay-cf/: README.md  package.json  schema.sql  wrangler.jsonc
relay-cf/src/: auth.ts  do-client.ts  index.ts  mcp-handler.ts  mcp-tools.ts  origin.ts  pages.ts  routes.ts  schema.ts  tunnel-do.ts  util.ts
relay/cf/: package-lock.json  package.json  schema.sql  wrangler.jsonc
relay/cf/src/: auth.ts  do-client.ts  env.ts  index.ts  mcp-handler.ts  mcp-tools.ts  origin.ts  routes.ts  schema.ts  tunnel-do.ts  util.ts
relay/node/: package-lock.json  package.json
relay/node/src/: pages.ts  routes.ts  server.ts
relay/node/src/lib/mcp/: handler.ts  tools.ts
relay/node/src/lib/relay/: auth.ts  hub.spec.ts  hub.ts
relay/src/: adapter.ts  pages.ts  routes.ts  server.ts
scripts/: build-desktop.sh  fake-home.mjs  release.sh  smoke-mcp.sh  smoke-relay.sh  tauri-build.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  main.rs
