[workspace]
resolver = "3"
members = ["core", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Versions inherited from the source crates (kb-compile / kb-query).
[workspace.dependencies]
homekb-core = { path = "core" }
anyhow = "1.0.102"
async-openai = { version = "0.40.1", default-features = false, features = ["chat-completion", "embedding", "rustls", "byot"] }
bytemuck = "1.25.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
hex = "0.4.3"
rusqlite = { version = "0.39.0", features = ["bundled", "load_extension", "backup"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlite-vec = "0.1.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "io-std", "io-util"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"
getrandom = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
