[package]
name = "homekb-desktop"
version = "0.1.0"
description = "HomeKB 桌面客户端 —— 纯渲染器：检测/安装引擎 → 连 homekb serve"
edition = "2021"

[[bin]]
name = "homekb-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
