[package]
name = "homekb-desktop"
version = "0.1.0"
description = "HomeKB desktop client — pure renderer: detect/install engine → connect to homekb serve"
edition = "2021"
license = "MIT"
repository = "https://github.com/do-md/homekb"

[[bin]]
name = "homekb-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
