[package]
name = "homekb-desktop"
version = "0.1.3"
description = "HomeKB desktop client — pure renderer: detect/install engine → connect to homekb serve"
edition = "2021"
license = "MIT"
repository = "https://github.com/do-md/homekb"

[[bin]]
name = "homekb-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
# Engine acquisition (docs/ARCHITECTURE.md "Engine acquisition"): download the
# latest engine-v* release artifact from GitHub and unpack the single-binary
# tar.gz. reqwest is already in the dependency tree via tauri-plugin-updater;
# rustls keeps TLS off the system stack.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
tar = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
