[package]
name = "homekb-cli"
version.workspace = true
edition.workspace = true
description = "homekb command line: init/reindex/watch/query/status/rebuild (+ mcp/register/pair/tunnel stubs)"

[[bin]]
name = "homekb"
path = "src/main.rs"

[dependencies]
homekb-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
hostname.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
