[package]
name = "homekb-core"
version.workspace = true
edition.workspace = true
description = "homekb engine core: markdown KB compiler (chunk/embed/summarize/classify) + two-pool KNN retrieval"

[lib]
name = "homekb_core"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
bytemuck.workspace = true
dirs.workspace = true
fs2.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
